repair texecs broken css :P

--- a/configs/conferences/33c3/main.less
+++ b/configs/conferences/33c3/main.less
@@ -171,8 +171,7 @@ h1, h2, body.overview .room a.title, body.overview .panel-primary a, .navbar-bra
 	}
 }
 
-.overview .room-group-live-music .room. .panel .panel-body,
-.overview .room-group-live-music .room. .panel .panel-body {
+.overview .room-group-live-music .room .panel .panel-body {
 	margin-bottom: 0;
 }
 
